# es-keap-database

./: .env.example  .gitignore  Makefile  README.md  backup_and_rollback.sh  check_web_access.sh  keap-oauth.service  keapdb.conf  latest_backup.txt  pyproject.toml  requirements.txt  restore_web_access.sh  run_tests.py
backups/20251024_021223/: iptables_rules.txt  keap-oauth.service  nftables_rules.txt  ufw_status.txt
docs/: STD_AI_CHECKIN_PROCESS.md  STD_CSV_EXPORT.md  cursor_master_prompt.md  etl_problem_analysis.md  etl_tracker_migration.md  export_guide.md  file_management_guide.md  implementation_story.md  keap_api_reference.md  keap_functionality_user_stories.md  project_layout.md  user_story.md
exports/: analytics_dataset_20251024_010736.parquet  companies_20251024_010748.csv  contacts_20251024_010727.csv  contacts_20251024_010732.parquet  contacts_20251024_010748.csv  notes_20251024_010748.csv  opportunities_20251024_010748.csv  tags_20251024_010748.csv  tasks_20251024_010749.csv  users_20251024_010749.csv
scripts/: add_dns_record.py  check_dns_propagation.py  firewall_status.sh
sql/: add_custom_fields.sql  add_file_storage.sql  add_observability_metrics.sql  add_resume_capability.sql  keap_etl_support.sql  keap_validation.sql  schema.sql  validate_foreign_keys.sql
src/keap_export/: auth.py  client.py  config.py  db.py  etl_meta.py  etl_tracker_v2.py  exporters.py  file_manager.py  logger.py  retry.py  sync_base.py
src/scripts/: export_data.py  manage_files.py  migrate_etl_tracker.py  oauth_callback_server.py  observability_dashboard.py  run_validation.py  sample_connect.py  simulate_interruption.py  sync_all.py  sync_companies.py  sync_contacts.py  sync_notes.py  sync_opportunities.py  sync_orders.py  sync_payments.py  sync_products.py  sync_tags.py  sync_tasks.py  sync_users.py  test_file_management.py  test_new_etl_tracker.py  test_observability.py  test_resume.py  test_structure.py
tests/: __init__.py  test_auth.py  test_client.py  test_db.py
tmp/: keapdb-updated.conf  nginx-keapdb.conf  nginx-ui.conf
ui/: README.md
ui/streamlit/: app.py  env.example  requirements.txt  start_ui.sh
